--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <h2>Projects</h2>
 
     <h3>AI Resume–Job Description Matching System</h3>
-    <p>Built an NLP-based system that measures resume alignment with job descriptions using TF-IDF and cosine similarity.</p>
+    <p>Built an NLP-based system that measures resume alignment with job descriptions using TF-IDF and cosine similarity.
+    <br>
+    <a href="https://github.com/sreesushma" target="_blank">View on GitHub</a>
+    </p>
     
     <h3>Big Data App Store Analytics</h3>
     <p>Analyzed large-scale mobile app data using PySpark and built a predictive model for content rating classification.</p>
