--- a/index.html
+++ b/index.html
@@ -40,14 +40,19 @@
     <h3>AI Resume–Job Description Matching System</h3>
     <p>Built an NLP-based system that measures resume alignment with job descriptions using TF-IDF and cosine similarity.
     <br>
-    <a href="https://github.com/sreesushma" target="_blank">View on GitHub</a>
+    <a href="https://github.com/sreesushma/resume-jd_matching-nlp" target="_blank">View on GitHub</a>
     </p>
     
     <h3>Big Data App Store Analytics</h3>
-    <p>Analyzed large-scale mobile app data using PySpark and built a predictive model for content rating classification.</p>
+    <p>Analyzed large-scale mobile app data using PySpark and built a predictive model for content rating classification.
+    <a href="https://github.com/sreesushma/Big-Data-App-Store-Analytics" target="_blank">View on Github</a>
+    </p>
     
     <h3>Machine Learning Pipeline for Classification and Clustering</h3>
-    <p>Developed an end-to-end ML pipeline comparing supervised and unsupervised learning techniques.</p>
+    <p>Developed an end-to-end ML pipeline comparing supervised and unsupervised learning techniques.
+    <br>
+    <a href="https://github.com/sreesushma/machine-learning-classification-clustering-pipeline" target="_blank">View on GitHub</a>
+    </p>
 
   </section>
 
