--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
     <p>Email: sreesushmadamineni@gmail.com</p>
     <p>GitHub: https://github.com/sreesushma</p>
     <p>LinkedIn: https://www.linkedin.com/in/sree-sushma-damineni</p>
+    <br>
+    <a href="sreesushmadamineni@gmail.com" target="_balnk"> Mail</a>
+    <br>
+    <a href="https://github.com/sreesushma" target="_blank">Github</a>
+    <br>
+    <a href="https://www.linkedin.com/in/sree-sushma-damineni" target="_blank">LinkedIn</a>
+    
 
   </section>
 
