--- a/index.html
+++ b/index.html
@@ -74,18 +74,23 @@
   <!-- CONTACT -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: sreesushmadamineni@gmail.com</p>
-    <p>GitHub: https://github.com/sreesushma</p>
-    <p>LinkedIn: https://www.linkedin.com/in/sree-sushma-damineni</p>
-    <br>
-    <a href="sreesushmadamineni@gmail.com" target="_balnk"> Mail</a>
-    <br>
-    <a href="https://github.com/sreesushma" target="_blank">Github</a>
-    <br>
-    <a href="https://www.linkedin.com/in/sree-sushma-damineni" target="_blank">LinkedIn</a>
-    
+  
+    <div class="contact-links">
+      <a href="mailto:sreesushmadamineni@gmail.com" target="_blank">
+        <i class="fa-solid fa-envelope"></i> Email
+      </a>
+  
+      <a href="https://github.com/sreesushma" target="_blank">
+        <i class="fa-brands fa-github"></i> GitHub
+      </a>
+  
+      <a href="https://www.linkedin.com/in/sree-sushma-damineni" target="_blank">
+        <i class="fa-brands fa-linkedin"></i> LinkedIn
+      </a>
+    </div>
 
   </section>
+
 
 </body>
 </html>
