--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 
 <body>
 
+  <nav class="navbar">
+  <div class="nav-container">
+    <h3 class="logo">Sree</h3>
+
+    <div class="nav-links">
+      <a href="#hero">Home</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+</nav>
+
+
   <!-- HERO -->
   <section id="hero">
     <h1>Sree Sushma Damineni</h1>
