--- a/index.html
+++ b/index.html
@@ -27,11 +27,21 @@
 
   <!-- HERO -->
   <section id="hero">
-    <h1>Sree Sushma Damineni</h1>
-    <h2>AI Engineer | Machine Learning Engineer | Data Scientist</h2>
-    <p>I build machine learning systems that transform real-world data into actionable insights and intelligent decision tools.</p>
-
+    <div class="hero-content">
+      <h1>Sree Sushma Damineni</h1>
+      <h2>AI Engineer | Machine Learning Engineer | Data Scientist</h2>
+      <p>
+        I build machine learning systems that transform real-world data into actionable insights
+        and intelligent decision tools.
+      </p>
+  
+      <div class="hero-buttons">
+        <a href="#projects" class="btn-primary">View Projects</a>
+        <a href="#contact" class="btn-secondary">Contact Me</a>
+      </div>
+    </div>
   </section>
+
 
   <!-- ABOUT -->
   <section id="about">
