--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="projects">
     
     <h2>Projects</h2>
-
+    <div class="project-grid">
     <div class="project-card flagship">
     <span class="badge">⭐ Flagship</span>
 
