--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <p><strong>Tech:</strong> Python, scikit-learn, NLP, matplotlib</p>
 
     <div class="project-links">
-      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-primary">View Code</a>
+      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-primary">View on GitHub</a>
       <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-secondary">Live Demo</a>
     </div>
   </div>
