--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <div class="project-links">
       <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-primary">View on GitHub</a>
-      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-secondary">Live Demo</a>
+      <a href="https://resume-matcher-webapp.onrender.com" target="_blank" rel="noopener" class="btn-secondary">Live Demo</a>
     </div>
   </div>
 
