--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <p>
       NLP-based system that quantifies resume alignment with job descriptions using TF-IDF and cosine similarity.
-      Generates match score, skill comparison, and missing keyword insights.
+      Generates match score, skill comparison, and missing keyword insights.Deployed as a live web application for real-time resume evaluation.
     </p>
 
     <p><strong>Tech:</strong> Python, scikit-learn, NLP, matplotlib</p>
