--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <p><strong>Tech:</strong> Python, scikit-learn, NLP, matplotlib</p>
 
     <div class="project-links">
-      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-primary">View on GitHub</a>
-      <a href="https://resume-matcher-webapp.onrender.com" target="_blank" rel="noopener" class="btn-secondary">Live Demo</a>
+      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="hero-buttons">View on GitHub</a>
+      <a href="https://resume-matcher-webapp.onrender.com" target="_blank" rel="noopener" class="hero-buttons">Live Demo</a>
     </div>
   </div>
 
