--- a/index.html
+++ b/index.html
@@ -68,22 +68,43 @@
     <h2>Projects</h2>
     <div class="project-grid">
     <div class="project-card flagship">
-    <span class="badge">⭐ Flagship</span>
 
-    <h3>AI Resume–Job Description Matching</h3>
+  <span class="badge">⭐ Flagship Project</span>
 
-    <p>
-      NLP-based system that quantifies resume alignment with job descriptions using TF-IDF and cosine similarity.
-      Generates match score, skill comparison, and missing keyword insights.Deployed as a live web application for real-time resume evaluation.
-    </p>
+  <h3>AI Resume–Job Description Matching Web App</h3>
 
-    <p><strong>Tech:</strong> Python, scikit-learn, NLP, matplotlib</p>
+  <p class="project-impact">
+    Deployed NLP application that evaluates resume relevance against job descriptions
+    and identifies skill gaps using TF-IDF and cosine similarity.
+  </p>
 
-    <div class="project-links">
-      <a href="https://github.com/sreesushma/resume-matcher-webapp" target="_blank" rel="noopener" class="btn-primary">View on GitHub</a>
-      <a href="https://resume-matcher-webapp.onrender.com" target="_blank" rel="noopener" class="btn-primary">Live Demo</a>
-    </div>
+  <p class="project-description">
+    Users can paste text or upload a PDF resume to receive a match score,
+    matched skills, and missing keywords through an interactive web interface.
+  </p>
+
+  <p class="project-tech">
+    <strong>Tech Stack:</strong>
+    Python • Flask • scikit-learn • NLP • HTML/CSS • Cloud Deployment
+  </p>
+
+  <div class="project-links">
+    <a href="https://resume-matcher-webapp.onrender.com"
+       target="_blank"
+       rel="noopener"
+       class="btn-primary">
+       Live Demo
+    </a>
+
+    <a href="https://github.com/sreesushma/resume-matcher-webapp"
+       target="_blank"
+       rel="noopener"
+       class="btn-secondary">
+       GitHub Repo
+    </a>
   </div>
+
+</div>
 
     
       <div class="project-card">
