--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <a href="https://resume-matcher-webapp.onrender.com"
        target="_blank"
        rel="noopener"
-       class="btn-secondary">
+       class="btn-primary">
        Live Demo
     </a>
 
