--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
        I build practical machine learning systems that transform real-world data into 
         interpretable insights and interactive tools.
       </p>
-  
+      <p class="hero-impact">
+      Deployed AI systems • Real-world ML pipelines • Data-driven decision tools
+      </p>
       <div class="hero-buttons">
         <a href="#projects" class="btn-primary">View Projects</a>
         <a href="#contact" class="btn-secondary">Contact Me</a>
@@ -69,7 +71,12 @@
     <div class="project-grid">
     <div class="project-card flagship">
 
-  <span class="badge">⭐ Flagship Project</span>
+    <div class="project-badges">
+    <span class="badge flagship-badge">⭐ Flagship</span>
+    <span class="badge live-badge">Live</span>
+    </div>
+
+  <h3>AI Resume–Job Description Matching</h3>
 
   <h3>AI Resume–Job Description Matching Web App</h3>
 
