--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
 </section>
 
 
+  <section id="goal">
+  <h2>What I’m Looking For</h2>
+
+  <p class="goal-text">
+    I’m seeking an entry-level AI Engineer or Machine Learning Engineer role where I can build,
+    deploy, and improve real-world intelligent systems.
+  </p>
+
+  <p class="goal-subtext">
+    Interested in applied machine learning, NLP systems, and data-driven products that create measurable impact.
+  </p>
+</section>
+
   <!-- PROJECTS -->
   <section id="projects">
     
