--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <a href="https://github.com/sreesushma/resume-matcher-webapp"
        target="_blank"
        rel="noopener"
-       class="btn-secondary">
+       class="btn-primary">
        GitHub Repo
     </a>
   </div>
@@ -152,7 +152,7 @@
     <a href="https://github.com/sreesushma/Big-Data-App-Store-Analytics"
        target="_blank"
        rel="noopener"
-       class="btn-secondary">
+       class="btn-primary">
        GitHub Repo
     </a>
   </div>
@@ -187,7 +187,7 @@
     <a href="https://github.com/sreesushma/machine-learning-classification-clustering-pipeline"
        target="_blank"
        rel="noopener"
-       class="btn-secondary">
+       class="btn-primary">
        GitHub Repo
     </a>
   </div>
