Final portfolio structure with deployed AI project and UI improvements

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </p>
       <div class="hero-buttons">
         <a href="#projects" class="btn-primary">View Projects</a>
-        <a href="#contact" class="btn-secondary">Contact Me</a>
+        <a href="https://resume-matcher-webapp.onrender.com" class="btn-primary" target="_blank">Try Live AI Tool</a>
       </div>
     </div>
   </section>
